--- a/prometheus-setup/prometheus.yml
+++ b/prometheus-setup/prometheus.yml
@@ -9,10 +9,11 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-      # - alertmanager:9093
+      - localhost:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
+  - "prometheus-rules.yml"
   # - "first_rules.yml"
   # - "second_rules.yml"
 
@@ -20,10 +21,14 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
+  - job_name: 'Prometheus'
     static_configs:
-    - targets: ['localhost:9090','localhost:9100','192.168.33.11:9100']
+    - targets: ['localhost:9090']
+
+  - job_name: 'Node Monitor'
+    static_configs:
+    - targets: ['localhost:9100','192.168.33.11:9100']
+
+  - job_name: 'Alert Manager'
+    static_configs:
+    - targets: ['localhost:9093']
